@@ -142,6 +142,7 @@ public class SunflowGUI extends javax.swing.JFrame implements UserInterface {
             System.out.println("  -buildonly       Do not call render method after loading the scene");
             System.out.println("  -showaa          Display sampling levels per pixel for bucket renderer");
             System.out.println("  -nogi            Disable any global illumination engines in the scene.");
+            System.out.println("  -pathgi n        Use path tracing with n samples to render global illumination");
             System.out.println("  -quick_ambocc d  Applies ambient occlusion to the scene with specified maximum distance");
             System.out.println("  -quick_uvs       Applies a surface uv visualization shader to the scene");
             System.out.println("  -quick_normals   Applies a surface normal visualization shader to the scene");
@@ -174,6 +175,7 @@ public class SunflowGUI extends javax.swing.JFrame implements UserInterface {
             boolean lowPriority = true;
             boolean showAA = false;
             boolean noGI = false;
+            int pathGI = 0;
             Shader shaderOverride = null;
             int resolutionW = 0, resolutionH = 0;
             int bucketSize = 0;
@@ -227,6 +229,11 @@ public class SunflowGUI extends javax.swing.JFrame implements UserInterface {
                 } else if (args[i].equals("-nogi")) {
                     noGI = true;
                     i++;
+                } else if (args[i].equals("-pathgi")) {
+                    if (i > args.length - 2)
+                        usage(false);
+                    pathGI = Integer.parseInt(args[i + 1]);
+                    i += 2;
                 } else if (args[i].equals("-quick_ambocc")) {
                     if (i > args.length - 2)
                         usage(false);
@@ -352,6 +359,10 @@ public class SunflowGUI extends javax.swing.JFrame implements UserInterface {
                     api.parameter("filter", filterType);
                 if (noGI)
                     api.parameter("gi.engine", "none");
+                else if (pathGI > 0) {
+                    api.parameter("gi.engine", "path");
+                    api.parameter("gi.path.samples", pathGI);
+                }
                 api.parameter("sampler", sampler);
                 api.options(SunflowAPI.DEFAULT_OPTIONS);
                 if (shaderOverride != null) {
